<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="itesm.mx.red_contactos_am.AddContactActivity"
    tools:showIn="@layout/activity_add_contact">


        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:id="@+id/image_foto"
            android:src="@drawable/ic_contact"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp" />


            <Button
                android:id="@+id/button_buscar_foto"
                android:text="@string/buscar_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/image_foto"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.461"
                android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@+id/button_tomar_foto"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/button_tomar_foto"
                android:text="@string/tomar_foto"
                android:layout_width="118dp"
                android:layout_height="48dp"
                app:layout_constraintLeft_toRightOf="@+id/image_foto"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="47dp"
                app:layout_constraintHorizontal_bias="0.471"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />


    <EditText
        android:id="@+id/edit_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="33dp"
        android:hint="@string/nombre_contacto"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_foto"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/edit_telefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/telefono_contacto"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nombre"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Spinner
        android:id="@+id/spinner_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_categorias_spinner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintTop_toTopOf="@+id/tv_categorias_spinner"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/button_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_categorias_spinner"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/tv_categorias_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tipo de contacto"
        android:layout_marginLeft="81dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="18dp"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_telefono"
        android:layout_marginStart="81dp" />


</android.support.constraint.ConstraintLayout>
